fix road list cutoff and scroll

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ a {
 
 ul {
 	overflow: scroll;
-	height: 60%;
+	height: 40em;
 	padding: 0;
 	list-style: none;
 }
